add css and emoticones

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
   <header>
     <nav class="navbar">
       <!-- Logo / site name -->
-      <h1 class="logo">Très Hypée Progame</h1>
+      <h1 class="logo">🎮 Très Hypée Progame 🎮</h1>
 
       <!-- Navigation links -->
-      <ul class="nav-links">
-        <li><a href="#/">Accueil</a></li> <!-- Home page -->
-        <li><a href="#/games">Liste des jeux</a></li> <!-- Games list page -->
-      </ul>
+        <ul class="nav-links">
+            <li><a href="#/" class="nav-link"><i class="fa-solid fa-house"></i> Accueil</a></li>
+            <li><a href="#/pagelist" class="nav-link"><i class="fa-solid fa-list"></i> Liste des jeux</a></li>
+        </ul>
     </nav>
   </header>
 
@@ -36,6 +36,7 @@
        FOOTER
   ======================== -->
   <footer>
+    🕹️
     <p>&copy; 2026 Très Hypée Progame by Martine</p>
   </footer>
 </body>
