modif css title and subtitle

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,13 @@
             <li><a href="#/pagelist" class="nav-link"><i class="fa-solid fa-list"></i> Liste des jeux</a></li>
         </ul>
     </nav>
+    <div class="welcome-text">
+      <p class="welcome-title">🔥 Welcome gamer 🔥</p>
+      <p class="welcome-subtitle">
+        Search for your favorite games and explore details, screenshots and ratings.
+      </p>
+    </div>
+
   </header>
 
   <!-- ========================
