modif Logo and title

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
   <header>
     <nav class="navbar">
       <!-- Logo / site name -->
-      <h1 class="logo">🎮 Très Hypée Progame 🎮</h1>
+      <h1 class="logo">🎮 Very Hyped Progame 🎮</h1>
 
       <!-- Navigation links -->
         <ul class="nav-links">
-            <li><a href="#/" class="nav-link"><i class="fa-solid fa-house"></i> Accueil</a></li>
-            <li><a href="#/pagelist" class="nav-link"><i class="fa-solid fa-list"></i> Liste des jeux</a></li>
+            <li><a href="#/" class="nav-link"><i class="fa-solid fa-house"></i> Home</a></li>
+            <li><a href="#/pagelist" class="nav-link"><i class="fa-solid fa-list"></i> Game list</a></li>
         </ul>
     </nav>
     <div class="welcome-text">
